--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1550,60 +1550,145 @@ h1,h2,h3,h4{
     -o-transform: scale(1.1);
 }
 
+.details__body{
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    height: auto;
+}
+@media (max-width:660px){
+    .details__body{
+        flex-direction: column;
+    }
+}
+.details__details{
+    padding: 1rem 0;
+    padding-bottom: 0;
+}
+
 .details__preview{
-    width: 100%;
+    width: 80%;
     max-height: 500px;
     margin-bottom: 1rem;
+}
+@media (max-width:660px){
+    .details__preview{
+        width: 100%;
+    }
 }
 
 .details__preview__element{
     background-color: #eeeeee;
     width: 100%;
-    height: 100%;
+    height: auto;
     max-height: 500px;
     object-fit: contain;
     object-position: center;
 }
 .details__preview__element * {
+    display: block;
+    object-fit: contain;
+    object-position: center;
     width: 100%;
-    height: 500px;
+    max-height: 450px;
+}
+@media (max-width:660px){
+    .details__preview__element *{
+        height: 250px;
+    }
 }
 .details__contenedor{
+    width: 19%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+@media (max-width:660px){
+    .details__contenedor{
+        width: 100%;
+        height: min-content;
+    }
 }
 .details__images{
     display: grid;
-    width: 75%;
-    grid-template-columns: repeat(5,1fr);
+    width: 100%;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(5, 1fr);
     object-fit: contain;
     gap: 1px;
+}
+@media (max-width:660px){
+    .details__images{
+        height: 100%;
+        grid-template-columns: repeat(5,1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
 }
 .details__images img{
     cursor: pointer;
     width: 100%;
-    height: 100px;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
 .details__videos{
     display: flex;
-    flex-direction: column;
-    width: 23%;
+    width: 100%;
+    height: auto;
     gap: 1px;
     cursor: pointer;
+}
+@media (max-width:660px){
+    .details__videos{
+        width: 100%;
+        height: 100px;
+        margin-top: 1rem;
+    }
 }
 .details__video{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #161616;
+    background-color: #323232;
     width: 100%;
-    height: 100px;
-    color: red;
-    font-size: 2rem;
+    height: 70px;
+    transition: .3s ease;
+    -webkit-transition: .3s ease;
+    -moz-transition: .3s ease;
+    -ms-transition: .3s ease;
+    -o-transition: .3s ease;
+    border: solid 0px white;
 }
-
+@media (max-width:660px){
+    .details__video{
+        height: 100%;
+    }
+}
+.details__video:hover{
+    border: solid 2px white;
+    background-color: rgb(209, 40, 40);
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+}
+.details__video .icon{
+    font-size: 2rem;
+    color: var(--secundario);
+    transition: .3s ease;
+    -webkit-transition: .3s ease;
+    -moz-transition: .3s ease;
+    -ms-transition: .3s ease;
+    -o-transition: .3s ease;
+}
+.details__video:hover .icon{
+    color: white;
+    transform: scale(.7);
+    -webkit-transform: scale(.7);
+    -moz-transform: scale(.7);
+    -ms-transform: scale(.7);
+    -o-transform: scale(.7);
+}
 
 /* !SECTION */
 
